<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frontPageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrontPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frontPageConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/frontPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="serif"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/difficulties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frontPageTitle">

            <RadioButton
                android:id="@+id/easyRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:buttonTint="@color/black"
                android:fontFamily="serif"
                android:text="@string/easy_difficulty"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/mediumRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:buttonTint="@color/black"
                android:fontFamily="serif"
                android:text="@string/medium_difficulty"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/hardRadioBtn"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:buttonTint="@color/black"
                android:fontFamily="serif"
                android:text="@string/hard_difficulty"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="serif"
            android:text="@string/play_button"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/difficulties" />

        <Button
            android:id="@+id/highscoresButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="serif"
            android:text="@string/highscores_button"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>